--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,33 +1,30 @@
-/* Reset styles and box model */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-/* Body styles */
 body {
     background-color: #d9dcd6;
 }
 
-/* Header styles */
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -35,27 +32,24 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
-/* Link styles */
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
-/* Paragraph styles */
 p {
     font-size: 16px;
 }
 
-/* Hero section styles */
 .hero {
     height: 800px;
     width: 100%;
@@ -65,7 +59,6 @@ p {
     background-position: center;
 }
 
-/* Float styles */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -76,93 +69,65 @@ p {
     margin-left: 25px;
 }
 
-/* Content section styles */
-.content {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-/* Benefits section styles */
 .benefits {
     margin-right: 20px;
     padding: 20px;
     clear: both;
     float: right;
-    width: 20%;
+    width: 20%; /* Adjusted width to leave space for the main content */
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
 
-/* Consolidated benefit styles */
-.benefit-lead,
-.benefit-brand,
-.benefit-cost {
+.benefits section {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-lead h3,
-.benefit-brand h3,
-.benefit-cost h3 {
+.benefits section h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-lead img,
-.benefit-brand img,
-.benefit-cost img {
+.benefits section img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-/* Section styles */
-.search-engine-optimization,
-.online-reputation-management,
-.social-media-marketing {
+section {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
     color: #ffffff;
 }
 
-/* Image styles within sections */
-.search-engine-optimization img,
-.online-reputation-management img,
-.social-media-marketing img {
+section img {
     max-height: 200px;
 }
 
-/* Heading styles within sections */
-.search-engine-optimization h2,
-.online-reputation-management h2,
-.social-media-marketing h2 {
+section h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-/* Footer styles */
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
-}
-
-/* Responsive styles */
-@media only screen and (max-width: 768px) {
-    .content {
-        width: 100%;
-    }
-    .benefits {
-        width: 100%;
-        margin-right: 0;
-    }
 }
