--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ main {
     padding: 20px;
     clear: both;
     float: right;
-    width: 20%; /* Adjusted width to leave space for the main content */
+    width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
@@ -102,7 +102,7 @@ main {
     max-width: 150px;
 }
 
-section {
+main section {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -125,7 +125,6 @@ footer {
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
-    
 }
 
 footer h2 {
